# data

./: README.md  categories.json  model.schema.json  model_urls.txt  models.json
formatter-generator/: Cargo.toml
formatter-generator/src/: main.rs  model_schema.rs
formatter-generator/src/parse/: mod.rs  thangs.rs
