[package]
name = "formatter-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.2.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
soup = "0.5.1"
ureq = "2.5.0"
url = "1.0.0"
url_serde = "0.2.0"